Fix layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -471,8 +471,8 @@ footer {
 }
 
 .about-profile-picture {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     object-fit: cover;
     border: 2px solid var(--border-color);
@@ -707,6 +707,14 @@ footer {
     }
 }
 
+html {
+    overflow-y: scroll;
+}
 
+.favorite-articles {
+    margin: 0 auto;
+}
 
-
+.favorite-articles ul {
+    list-style: none;
+}
